<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:textColor="#BD1255"
    tools:context="com.example.bulletinboard.Main2Activity">

<ListView
    android:id="@+id/post_list"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="?attr/colorBackgroundFloating"
    android:divider="@color/colorPrimaryDark"
    android:dividerHeight="5dp"></ListView>


    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="createPostScreen" />

</LinearLayout>
